--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -11,7 +11,6 @@ env:
   TF_IN_AUTOMATION: true
 
 jobs:
-
   terraform:
     name: "Terraform"
     runs-on: ubuntu-latest
@@ -26,6 +25,7 @@ jobs:
     permissions:
       contents: read
       id-token: write # This is required for requesting the JWT
+      pull-requests: write
     steps:
       - name: Checkout
         uses: actions/checkout@b4ffde65f46336ab88eb53be808477a3936bae11 # v4
